testsuite/poke.pkl/int-struct-type-diag-1.pk
/* { dg-do compile } */

deftype Foo =
  struct int<0> /* { dg-error "" } */
  {
  };
